syntax = "proto3";

package dubbo.mesh.v1alpha1;

option go_package = "github.com/apache/dubbo-kubernetes/api/mesh/v1alpha1";

import "api/mesh/options.proto";

message MetaData {
  option (dubbo.mesh.resource).name = "MetaDataResource";
  option (dubbo.mesh.resource).type = "MetaData";
  option (dubbo.mesh.resource).package = "mesh";
  option (dubbo.mesh.resource).dds.send_to_zone = true;
  option (dubbo.mesh.resource).ws.name = "metadata";
  option (dubbo.mesh.resource).ws.plural = "metadatas";
  option (dubbo.mesh.resource).allow_to_inspect = true;

  string app = 1;
  string revision = 2;
  // key format is '{group}/{interface name}:{version}:{protocol}'
  map<string, ServiceInfo> services = 3;
}

message ServiceInfo {
  string name = 1;
  string group = 2;
  string version = 3;
  string protocol = 4;
  int64 port = 5;
  string path = 6;
  map<string, string> params = 7;
}